<resources>
    <string name="app_name">RecipeReminder</string>

    <string name="title_activity_main">RecipeReminder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_categories_header">Categories</string>
    <string name="nav_help_header">Help &amp; feedback</string>
    <string name="nav_about">About</string>
    <string name="nav_participate">Participate..</string>
    <string name="category_breakfast">Breakfast</string>
    <string name="category_lunch">Lunch</string>
    <string name="category_dinner">Dinner</string>
    <string name="nav_add_category">Create new category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_categories">Edit Categories</string>
    <string name="title_activity_add_recipe">Add Recipe</string>
    <string name="title_activity_add_instructions">Edit Instructions</string>
    <string name="title_activity_edit_ingredients">Edit Ingredients</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_participate">Pause for the Cause</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <string name="nav_header_primary_text">Android Studio</string>
    <string name="nav_header_secondary_text">android.studio@android.com</string>

</resources>

