<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes_all"
            android:icon="@drawable/ic_menu_recipes_all"
            android:title="@string/nav_recipes" />
    </group>

    <item android:title="@string/nav_categories_header"
        app:actionLayout="@layout/edit_category_action"
        android:id="@+id/nav_category_parent">
        <menu>
            <group android:id="@+id/nav_category_group"
                android:menuCategory="container"
                android:checkableBehavior="single">

            </group>
        </menu>
    </item>

    <item android:title="@string/nav_help_header">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_participate"
                android:icon="@drawable/ic_menu_participate"
                android:title="@string/nav_participate" />
        </menu>
    </item>

</menu>
